# nedit

./: CMakeLists.txt  README.md  nedit.desktop
Regex/: Execute.cpp
Settings/: Settings.cpp
Util/: CMakeLists.txt  ServerCommon.cpp
Util/include/Util/: version.h.in
client/: CMakeLists.txt  nc.cpp
source/: nc.c  server.c
src/: CMakeLists.txt  DialogAbout.cpp  DialogPrompt.ui  DialogPromptList.ui  DialogPromptString.ui  Main.cpp  MainWindow.ui
src/res/icons/breeze-dark-nedit/: index.theme
src/res/icons/breeze-nedit/: index.theme
src/res/icons/nedit/: index.theme
util/: misc.c
